tests/baselines/reference/genericFunctionsWithOptionalParameters2.errors.txt
tests/cases/compiler/genericFunctionsWithOptionalParameters2.ts(7,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/genericFunctionsWithOptionalParameters2.ts (1 errors) ====
    interface Utils {
       fold<T, S>(c: Array<T>, folder?: (s: S, t: T) => T, init?: S): T;
    }
    
    var utils: Utils;
    
    utils.fold(); // error
    ~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    utils.fold(null); // no error
    utils.fold(null, null); // no error
    utils.fold(null, null, null); // error: Unable to invoke type with no call signatures
    